--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "'NASA Invites Students to Name Mars 2020 Rover'"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "\"Through Nov. 1, K-12 students in the U.S. are encouraged to enter an essay contest to name NASA's next Mars rover.\""
       ]
      },
-     "execution_count": 206,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,21 +126,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA18087-1920x1200.jpg;\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA19346-1920x1200.jpg\n"
      ]
     }
    ],
    "source": [
     "# Display full link to featured image\n",
     "feature_image_url=img_soup.find(\"div\",class_=\"carousel_items\").find(\"article\")[\"style\"].replace(\"background-image: url('/\",\"https://www.jpl.nasa.gov/\").\\\n",
-    "replace(\"')\",\"\")\n",
+    "replace(\"')\",\"\").replace(\";\",\"\")\n",
     "print (feature_image_url)"
    ]
   },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -252,39 +252,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Equatorial Diameter:</th>\n",
+       "      <td>Equatorial Diameter:</td>\n",
        "      <td>6,792 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Polar Diameter:</th>\n",
+       "      <td>Polar Diameter:</td>\n",
        "      <td>6,752 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mass:</th>\n",
+       "      <td>Mass:</td>\n",
        "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Moons:</th>\n",
+       "      <td>Moons:</td>\n",
        "      <td>2 (Phobos &amp; Deimos)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Orbit Distance:</th>\n",
+       "      <td>Orbit Distance:</td>\n",
        "      <td>227,943,824 km (1.38 AU)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Orbit Period:</th>\n",
+       "      <td>Orbit Period:</td>\n",
        "      <td>687 days (1.9 years)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Surface Temperature:</th>\n",
+       "      <td>Surface Temperature:</td>\n",
        "      <td>-87 to -5 °C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>First Record:</th>\n",
+       "      <td>First Record:</td>\n",
        "      <td>2nd millennium BC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Recorded By:</th>\n",
+       "      <td>Recorded By:</td>\n",
        "      <td>Egyptian astronomers</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -305,7 +305,7 @@
        "Recorded By:                   Egyptian astronomers"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,23 +316,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>value</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table border=\"1\" class=\"dataframe\">\n",
+      "  <thead>\n",
+      "    <tr style=\"text-align: right;\">\n",
+      "      <th></th>\n",
+      "      <th>value</th>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Description</th>\n",
+      "      <th></th>\n",
+      "    </tr>\n",
+      "  </thead>\n",
+      "  <tbody>\n",
+      "    <tr>\n",
+      "      <th>Equatorial Diameter:</th>\n",
+      "      <td>6,792 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Polar Diameter:</th>\n",
+      "      <td>6,752 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Mass:</th>\n",
+      "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Moons:</th>\n",
+      "      <td>2 (Phobos &amp; Deimos)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Orbit Distance:</th>\n",
+      "      <td>227,943,824 km (1.38 AU)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Orbit Period:</th>\n",
+      "      <td>687 days (1.9 years)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Surface Temperature:</th>\n",
+      "      <td>-87 to -5 °C</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>First Record:</th>\n",
+      "      <td>2nd millennium BC</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Recorded By:</th>\n",
+      "      <td>Egyptian astronomers</td>\n",
+      "    </tr>\n",
+      "  </tbody>\n",
+      "</table>\n"
+     ]
     }
    ],
    "source": [
     "html_table = df.to_html()\n",
-    "html_table"
+    "print(html_table)"
    ]
   },
   {
@@ -344,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,28 +405,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/04085d99ec3713883a9a57f42be9c725_valles_marineris_enhanced.tif_thumb.png'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/04085d99ec3713883a9a57f42be9c725_valles_marineris_enhanced.tif_thumb.png'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/04085d99ec3713883a9a57f42be9c725_valles_marineris_enhanced.tif_thumb.png'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/cache/images/04085d99ec3713883a9a57f42be9c725_valles_marineris_enhanced.tif_thumb.png'}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'partial_img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'partial_img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'partial_img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'partial_img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "hems=hem_soup.findAll('div',class_=\"item\")\n",
     "\n",
+    "hems_main_url=\"https://astrogeology.usgs.gov\"\n",
+    "\n",
     "hemisphere_image_urls=[]\n",
     "dicts={}\n",
     "for hem in hems:\n",
     "    dicts['title']=hem.find('h3').text\n",
-    "    dicts[\"img_url\"]=\"https://astrogeology.usgs.gov\"+hem.img['src']\n",
-    "    hemisphere_image_urls.append(dicts)\n",
+    "    partial_url=hem.find(\"a\", class_=\"itemLink product-item\")['href']\n",
     "    \n",
-    "print (hemisphere_image_urls)"
+    "    # visit the link contains the high resolution images\n",
+    "    browser.visit(hems_main_url+partial_url)\n",
+    "    \n",
+    "    partial_img_html = browser.html\n",
+    "    partial_img_soup = BeautifulSoup(partial_img_html, \"html.parser\")\n",
+    "    \n",
+    "    partial_img_url=partial_img_soup.find('div',class_=\"wide-image-wrapper\").find(\"a\")['href']\n",
+    "    dicts['partial_img_url']=partial_img_url\n",
+    "    hemisphere_image_urls.append(dicts.copy())\n",
+    "\n",
+    "hemisphere_image_urls\n",
+    "    "
    ]
   }
  ],
